update social metadata

--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cid-website</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link
+    rel="icon"
+    type="image/svg+xml"
+    href="/favicon.svg"
+  />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <title>Home - CID Global Investments</title>
+
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta
+    property="og:title"
+    content="Home - CID Global Investments"
+  />
+  <meta
+    property="og:description"
+    content="Partnering with visionary entrepreneurs, we help families craft an everlasting heritage, harmonizing family values, enduring businesses, and treasured wealth for generations to come."
+  />
+  <meta
+    property="og:type"
+    content="website"
+  />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta
+    name="twitter:card"
+    content="summary_large_image"
+  />
+  <meta
+    name="twitter:title"
+    content="Home - CID Global Investments"
+  />
+  <meta
+    name="twitter:description"
+    content="Partnering with visionary entrepreneurs, we help families craft an everlasting heritage, harmonizing family values, enduring businesses, and treasured wealth for generations to come."
+  />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script
+    type="module"
+    src="/src/main.tsx"
+  ></script>
+</body>
+
 </html>
