include og image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     property="og:type"
     content="website"
   />
+  <meta
+    property="og:image"
+    content="/assets/og_image.jpg"
+  />
 
   <!-- Twitter Card Meta Tags -->
   <meta
@@ -40,6 +44,10 @@
   <meta
     name="twitter:description"
     content="Partnering with visionary entrepreneurs, we help families craft an everlasting heritage, harmonizing family values, enduring businesses, and treasured wealth for generations to come."
+  />
+  <meta
+    name="twitter:image"
+    content="/assets/og_image.jpg"
   />
 </head>
 
